# cs-note

./: .gitignore  README.md  course.session.sql  index.js  package.json
c++/: CMakeLists.txt  (+8 more)
graphics/crender/: CMakeLists.txt  main.cpp
graphics/crender/backup/lesson5/: main.cpp
graphics/crender/backup/lesson6b/: main.cpp
graphics/crender/backup/lesson7/include/: our_gl.cpp
graphics/crender/backup/lesson8(未完成)/: main.cpp
graphics/crender/backup/lesson8(未完成)/include/: model.cpp
graphics/crender/backup/project correction/: main.cpp
graphics/crender/backup/project correction/include/: model.cpp  our_gl.cpp  our_gl.h
graphics/crender/core/: model.cpp  model.h  sgl.cpp  sgl.h
graphics/learnopengl/: CMakeLists.txt  cube.frag  main.cpp  nanosuit.frag  nanosuit.geom  normal.vert  shader.frag  shader.vert
graphics/learnopengl/course/1. 入门/1.4 你好，三角形/: 1_course.cpp  2_EBO.cpp  3_hw1.cpp
graphics/learnopengl/course/1. 入门/1.5 着色器/1_uniform/: 1_uniform.cpp
graphics/learnopengl/course/1. 入门/1.5 着色器/2_more_properties/: 2_more_properties.cpp
graphics/learnopengl/course/1. 入门/1.5 着色器/3_shader_class/: main.cpp  shader.frag  shader.vert
graphics/learnopengl/course/1. 入门/1.5 着色器/4_exercise1/: main.cpp  shader.vert
graphics/learnopengl/course/1. 入门/1.5 着色器/5_exercise2/: main.cpp  shader.vert
graphics/learnopengl/course/1. 入门/1.5 着色器/6_exercise3/: main.cpp
graphics/learnopengl/course/1. 入门/1.6 纹理/1_load_create_texture/: main.cpp  shader.frag
graphics/learnopengl/course/1. 入门/1.6 纹理/2_exercise1/: main.cpp  shader.vert
graphics/learnopengl/course/1. 入门/1.6 纹理/3_exercise2/: main.cpp  shader.frag
graphics/learnopengl/course/1. 入门/1.6 纹理/4_exercise3/: main.cpp
graphics/learnopengl/course/1. 入门/1.6 纹理/5_exercise4/: main.cpp  shader.frag
graphics/learnopengl/course/1. 入门/1.7 变换/1_旋转和缩放/: main.cpp
graphics/learnopengl/course/2. 光照/1.1 颜色/: CMakeLists.txt  main.cpp
graphics/learnopengl/course/4. 高级OpenGL/4.8 高级GLSL/: shader.geom
graphics/learnopengl/include/: Mesh.h  Model.h  shader.h
graphics/learnopengl/notes/: 10. 帧缓冲.md  11. 立方体贴图.md  12. 高级数据.md  13. 高级GLSL.md  14. 几何着色器.md  15. 实例化.md  2. 概念一览.md  3. 纹理.md  4. 着色器.md  6. 投光物.md  7. 深度测试、模版测试.md  9. 面剔除.md  Normal Matrix.md  start.md  丢弃fragment、混合.md  摄像机.md  概念一览.md  深度测试、模版缓冲.md  着色器.md
graphics/tinyrenderer/: CMakeLists.txt  backup.cpp  main.cpp
graphics/tinyrenderer/backup/lesson3/: main.cpp
graphics/tinyrenderer/backup/lesson5/include/: geometry.cpp
graphics/tinyrenderer/backup/lesson6/: main.cpp
graphics/tinyrenderer/backup/lesson6b/include/: our_gl.cpp  our_gl.h
graphics/tinyrenderer/backup/lesson7/: main.cpp
graphics/tinyrenderer/include/: model.cpp  model.h  our_gl.cpp  our_gl.h
(+406 files in other folders)
